--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -1,1 +1,6 @@
-spring.datasource.url=${DATABASE_URL}
+# Spring data Postgresql
+spring.datasource.driverClassName=org.postgresql.Driver
+
+
+# atualiza automaticamente caso seja criado um atributo ou tabela no banco de dados
+spring.jpa.hibernate.ddl-auto=update
